Run OpenRewrite on the whole code-base